--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,17 @@
     </head>
     
     <body>
-        <h1>CONTACT</h1>
+
+    <div class=" row footer">
+        <p><a class = "link" href = "index.html">Jenifer A. Lopez Rodriguez</a></p>
+        <p><a class = "link" href = "aboutMe.html"> About Me</a></p>
+        <p><a class = "link" href = "portfolio.html">Portfolio</a></p>
+    </div>
+
+<div>
+    <h1>CONTACT</h1>
+</div>
+
     </body>
     
 </html>
